--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <!-- Start Navigation -->
+    <!-- Start Header / Navigation -->
     <header>
     <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-    <!-- End Of Navigation -->
+    <!-- End Header / Navigation -->
 
     <!-- Start Hero / Jumbotron -->
 
@@ -96,13 +96,15 @@
         </section>
         <!-- End Benefits Section -->
 
-    <!-- Footer -->
+    <!-- Start Footer -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
+    <!-- End Footer -->
+
 </body>
 
 </html>
